addressed load balancing bug by making sure ArrayList containing the up port are unique